// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtInput Snap render AtInput -- props border 1`] = `
<view
  class="at-input"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputFDJGLGEG"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props clear 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputIMJGKADG"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props disabled 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container at-input--disabled"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputDJMNNLBL"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props editable 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container at-input--disabled"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputBMFCMOPO"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props error 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container at-input--error"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputCENPAEGC"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <view
      class="at-input__icon"
    >
      <text
        class="at-icon at-icon-close-circle at-input__icon-alert"
      />
    </view>
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props maxLength 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputEDOEAFOE"
      maxlength="10"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props name 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputOIKGPDBE"
      maxlength="140"
      name="name"
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props placeholder 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputAAKIMHNK"
      maxlength="140"
      name=""
      password="false"
      placeholder="placeholder"
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props required 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputFDPNBJGP"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props style 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputCPBIGFNA"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props title 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <label
      class="at-input__title"
      for=""
    >
      title
    </label>
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputDPODGCOE"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(digit) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputNNODCCCM"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="digit"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(idcard) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputKNKKELND"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="idcard"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(number) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputFKGJBPKD"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="number"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(password) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputPIPDHGMK"
      maxlength="140"
      name=""
      password="true"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props type(phone) 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputKJMBEJJH"
      maxlength="11"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="number"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render AtInput -- props value 1`] = `
<view
  class="at-input at-input--without-border"
  value="value"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputABLPCDOH"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;

exports[`AtInput Snap render initial AtInput 1`] = `
<view
  class="at-input at-input--without-border"
>
  <view
    class="at-input__container"
  >
    <!-- overlay -->
    <view
      class="at-input__overlay at-input__overlay--hidden"
    />
    <!-- title -->
    <!--v-if-->
    <!-- input -->
    <input
      adjust-position="false"
      auto-focus="false"
      class="at-input__input"
      confirm-type="done"
      cursor="0"
      cursor-spacing="50"
      id="weui-inputAMCAGBLO"
      maxlength="140"
      name=""
      password="false"
      placeholder=""
      placeholder-class="[object Object]"
      placeholder-style=""
      selection-end="-1"
      selection-start="-1"
      type="text"
    />
    <!-- clear icon -->
    <!--v-if-->
    <!-- error icon -->
    <!--v-if-->
    <!-- input slot -->
    <view
      class="at-input__children"
    >
      
      
    </view>
  </view>
</view>
`;
